[tool.poetry]
name = "requests-site"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.1"
flask-login = "^0.5.0"
authlib = "^0.14.2"
requests = "^2.23.0"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
flask-admin = "^1.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
