[tool.poetry]
name = "requests-site"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-sqlalchemy = "^2.4.1"
flask-login = "^0.5.0"
authlib = "^0.14.2"
requests = "^2.23.0"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
flask-admin = "^1.5.6"
sentry-sdk = {extras = ["flask"], version = "^0.14.3"}
Flask-Assets = "^2.0"
"discord.py" = "^1.3.3"
jsmin = "^2.2.2"
mistune = "^0.8.4"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
